--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -6,9 +6,10 @@
 
 # States all environment variables in state dir
 state/database.env
-state/kickstart.pg_dump
+state/metabase-database.env
+state/metabase.pg_dump
 state/smarthost.env
 
 # All volumes in app
-volumes/kickstart-app
+volumes/urandom
 
