define metabase env

--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -7,6 +7,7 @@
 # States all environment variables in state dir
 state/database.env
 state/metabase-database.env
+state/metabase.env
 state/metabase.pg_dump
 state/smarthost.env
 
