define /dev/urandom:/dev/random:ro volume for matabase

--- a/imageroot/systemd/user/metabase-app.service
+++ b/imageroot/systemd/user/metabase-app.service
@@ -23,7 +23,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/metabase-app.pid \
     --pod-id-file %t/metabase.pod-id --replace -d --name  metabase-app \
     --env-file=%S/state/metabase-database.env \
     --env-file=%S/state/metabase.env \
-    --volume urandom:/dev/random:Z \
+    --volume /dev/urandom:/dev/random:ro \
     --env=NGINX_* \
     --env JAVA_TIMEZONE=US/Pacific \
     ${METABASE_IMAGE}
